--- a/index.html
+++ b/index.html
@@ -46,6 +46,19 @@
                 <img src="" alt="image2">
                 <img src="" alt="image3">
             </div>
+            <div id="annonce" class="carte">
+                <h1>Découvrez nos offres exceptionnelles!</h1>
+                <ul>
+                    <li>Enquêtes de terrain</li>
+                    <li>Mise en place d'un plan d'expérience</li>
+                    <li>Analyse de données statistiques</li>
+                    <li>Solution d'intelligence artificielle</li>
+                </ul>
+                <p>
+                    Souscrivez à l'une de nos offres à travers notre <a href="">plateforme</a>
+                    et bénéficiez de 10% de réduction sur nos tarifs!
+                </p>
+            </div>
         </div>
         <div id="pied">
             <div id="reseaux-sociaux">
